Fix hr spacing in emoji bullets.

--- a/resume-emoji.css
+++ b/resume-emoji.css
@@ -171,3 +171,8 @@ hr {
   height: 1px;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
+
+/* Fix hr spacing */
+#experience + hr {
+  margin-top: 2em;
+}
